--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ ul li.checked i:hover {
   color: black; /* Change back to black when hovered, even after toggle */
 }
 ul li span {
-  display:none;
+  display: none;
   position: absolute;
   right: 70px;
 }
@@ -233,9 +233,46 @@ ul li span {
 }
 
 /* For iPhone 12/13/14 screens (max-width: 430px) */
-@media (max-width: 430px) {
+/* @media (max-width: 430px) {
   .todo-app {
     padding: 25px 15px;
+  }
+
+  h2 {
+    font-size: 18px;
+  }
+
+  input {
+    font-size: 14px;
+    padding: 8px;
+  }
+
+  button {
+    padding: 10px 25px;
+    font-size: 13px;
+  }
+
+  ul li {
+    font-size: 14px;
+    padding: 10px 6px 10px 35px;
+  }
+
+  ul li::before {
+    height: 20px;
+    width: 20px;
+    top: 6px;
+    left: 3px;
+  }
+
+  ul li i {
+    font-size: 20px;
+    padding: 7px;
+  }
+} */
+@media only screen and (min-width: 390px) and (max-width: 767px) {
+  .todo-app {
+    padding: 25px 15px;
+    background-color: aqua;
   }
 
   h2 {
